dev/POCO/TEST/NEG/NTOKCMNT.POC
/* this file
   contains no
   tokens, only
   this multi-line
   comment. 
*/